Move AI prompts to resources and add evidence fallback